tests/compile_fail/borrow/multi_field.rs
#[derive(derive_more::Borrow)]
struct Foo {
    bar: i32,
    baz: f32,
}

fn main() {}
